--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -486,8 +486,8 @@ no policy is required to allow it. {{prodname}} only sends probes to egress gate
 ### Configure a Namespace or Pod to use egress gateways
 
 There are two ways to use egress gateways, both by annotating a Kubernetes Namespace or Pod. In the first method, it is possible to
-annotate a Kubernetes Namespace or Pod to use an egress gateway directly. While, in the second method, a Kubernetes Namespace or Pod is annotated to
-use an Egress Gateway Policy resource which allows to use an egress gateway for a specific destination or completely skip one.
+annotate a Kubernetes Namespace or Pod to use an egress gateway directly. While, in the second method, a namespace or pod is annotated to
+use an Egress Gateway Policy resource which allows you to use an egress gateway for a specific destination or completely skip one.
 
 #### Annotating a Namespace or pod to use an egress gateway directly
 
@@ -533,8 +533,8 @@ EOF
 #### Annotating a Namespace or pod to use an Egress Gateway Policy
 
 In a {{prodname}} cluster, it is possible annotate a Kubernetes Namespace or Pod for advanced use cases like:
-  - Sending egress traffic to multiple egress gateways based on destination
-  - Skipping egress gateways for reaching to local, but not in cluster, endpoints
+  - Sending egress traffic to multiple egress gateways based on destination.
+  - Skipping egress gateways for reaching to local, but not in-cluster endpoints.
 
 The following is an example of Egress Gateway Policy:
 
@@ -564,10 +564,10 @@ spec:
 
 :::note
 - If *destination* is not provided, it would be treated as 0.0.0.0/0 acting as the default rule.
-- If no gateway is specified, then egress traffic won't be sent to an egress gateway, and would be routed locally. This is helpful for reaching
-to local endpoints that are not part of cluster.
-- If gateway is specified, it's mandatory to set both selector and namespaceSelector. Selector and namespaceSelector both have the same meaning
-as explained in the previous section, except that setting namespaceSelector is mandatory when gateway is set in an Egress Gateway resource.
+- If no gateway is specified, then egress traffic won't be sent to an egress gateway, and instead would be routed locally.
+This is helpful for reaching local endpoints that are not part of a cluster.
+- If a gateway field is specified, it is mandatory to set both selector and namespaceSelector. Selector and namespaceSelector both have the same meaning
+as explained in the previous section, except that setting namespaceSelector is mandatory.
 - maxNextHops specifies the maximum number of egress gateway replicas from the selected deployment that a pod should depend on, as described in 
 [Optimize egress networking for workloads with long-lived TCP connections](egress-gateway-maintenance.mdx#reduce-the-impact-of-gateway-downtime).
 - {{prodname}} rejects an Egress Gateway Policy resource that has:
@@ -577,7 +577,7 @@ as explained in the previous section, except that setting namespaceSelector is m
   - two or more rules with the identical destination.
 :::
 
-To configure all the pods in a namespace to use an Egress Gateway Policy, for example named `egw-policy1`, you would annotate that namespace like this:
+To configure all the pods in a namespace to use an Egress Gateway Policy, for example one named `egw-policy1`, you would annotate that namespace like this:
 
 ```bash
 kubectl annotate ns <namespace> egress.projectcalico.org/egressGatewayPolicy="egw-policy1"
@@ -603,7 +603,7 @@ EOF
 :::note
 If a namespace or pod refer to an Egress Gateway Policy using annotations, but the actual Egress Gateway Policy is not created,
 {{prodname}} considers it as a misconfiguration, and blocks traffic from that namespace or pod. This is also the case, even
-the namespace or pod uses other egress annotaions like the ones mentioned in the previous section.
+the namespace or pod uses other egress annotations like the ones mentioned in the previous section.
 :::
 
 ### (Optional) Enable ECMP load balancing
