--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -129,7 +129,7 @@ Azure Route Server deployment is per VNet, as such each VNet with egress gateway
 - [Configure route reflector](#configure-route-reflector)
 - [Enable egress gateway support](#enable-egress-gateway-support)
 - [Deploy a group of egress gateways](#deploy-a-group-of-egress-gateways)
-- [Configure a Namespace or Pod to use egress gateways](#configure-a-namespace-or-pod-to-use-egress-gateways)
+- [Configure namespaces or pods to use egress gateways](#configure-namespaces-or-pods-to-use-egress-gateways)
 - [(Optional) Enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
 - [Control the use of egress gateways](#control-the-use-of-egress-gateways)
@@ -483,15 +483,17 @@ no policy is required to allow it. {{prodname}} only sends probes to egress gate
 "health" port. This ensures that during an upgrade, health probes are only sent to upgraded egress gateways.
 :::
 
-### Configure a Namespace or Pod to use egress gateways
+### Configuring namespaces and pods to use egress gateways
 
-There are two ways to use egress gateways, both by annotating a Kubernetes Namespace or Pod. In the first method, it is possible to
-annotate a Kubernetes Namespace or Pod to use an egress gateway directly. While, in the second method, a namespace or pod is annotated to
-use an Egress Gateway Policy resource which allows you to use an egress gateway for a specific destination or completely skip one.
+You can configure namespaces and pods to use an egress gateway by:
+* annotating the namespace or pod
+* applying an egress gateway policy to the namespace or pod.
 
-#### Annotating a Namespace or pod to use an egress gateway directly
+Using an egress gateway policy is more complicated, but it allows advanced use cases.
 
-In a {{prodname}} deployment, the Kubernetes Namespace and Pod resources honor annotations that
+#### Configure a namepace or pod to use an egress gateway (annotation method)
+
+In a {{prodname}} deployment, the Kubernetes namespace and pod resources honor annotations that
 tell that namespace or pod to use particular egress gateways. These annotations are selectors, and
 their meaning is "the set of pods, anywhere in the cluster, that match those selectors".
 
@@ -499,14 +501,14 @@ So, to configure all the pods in a namespace to use the egress gateways that are
 labelled with `egress-code: red`, you would annotate that namespace like this:
 
 ```bash
-kubectl annotate ns <namespace> egress.projectcalico.org/selector="egress-code == 'red'"
+kubectl annotate ns  egress.projectcalico.org/selector="egress-code == 'red'"
 ```
 
 By default, that selector can only match egress gateways in the same namespace. To select gateways
 in a different namespace, specify a `namespaceSelector` annotation as well, like this:
 
 ```bash
-kubectl annotate ns <namespace> egress.projectcalico.org/namespaceSelector="projectcalico.org/name == '<egress gateway namespace>'"
+kubectl annotate ns  egress.projectcalico.org/namespaceSelector="projectcalico.org/name == ''"
 ```
 
 Egress gateway annotations have the same [syntax and range of expressions](../../reference/resources/networkpolicy.mdx#selector) as the selector fields in
@@ -516,44 +518,44 @@ To configure a specific Kubernetes Pod to use egress gateways, specify the same 
 creating the pod. For example:
 
 ```bash
-kubectl apply -f - <<EOF
-apiVersion: v1
-kind: Pod
-metadata:
-  annotations:
-    egress.projectcalico.org/selector: egress-code == 'red'
-    egress.projectcalico.org/namespaceSelector: projectcalico.org/name == '<egress gateway namespace>'
+kubectl apply -f - <'
   name: my-client,
-  namespace: <namespace>,
+  namespace: ,
 spec:
   ...
 EOF
 ```
 
-#### Annotating a Namespace or pod to use an Egress Gateway Policy
+#### Configure a namespace or pod to use an egress gateway (egress gateway policy method)
 
-In a {{prodname}} cluster, it is possible annotate a Kubernetes Namespace or Pod for advanced use cases like:
-  - Sending egress traffic to multiple egress gateways based on destination.
-  - Skipping egress gateways for reaching to local, but not in-cluster endpoints.
+Creating an egress gateway policy allows gives you more control over how your egress gateways work.
+For example, you can:
+  - Send egress gateway traffic to multiple egress gateways, depending on the destination.
+  - Skip egress gateways for traffic that is bound for local endpoints that aren't in the cluster.
 
 The following is an example of Egress Gateway Policy:
 
-```
+```yaml
 apiVersion: projectcalico.org/v3
 kind: EgressGatewayPolicy
 metadata:
   name: "egw-policy1"
 spec:
   rules:
+  // callout-for-next-line
   - destination:
       cidr: 10.0.0.0/8
     description: "Local: no gateway"
   - destination:
       cidr: 11.0.0.0/8
     description: "Gateway to on prem"
+    // callout-for-next-line
     gateway:
+      // callout-for-next-line
       namespaceSelector: ...
+      // callout-for-next-line
       selector: ...
+      // callout-for-next-line
       maxNextHops: ...
   - description: "Gateway to internet"
     gateway:
@@ -562,48 +564,48 @@ spec:
       maxNextHops: ...
 ```
 
-:::note
-- If *destination* is not provided, it would be treated as 0.0.0.0/0 acting as the default rule.
-- If no gateway is specified, then egress traffic won't be sent to an egress gateway, and instead would be routed locally.
-This is helpful for reaching local endpoints that are not part of a cluster.
-- If a gateway field is specified, it is mandatory to set both selector and namespaceSelector. Selector and namespaceSelector both have the same meaning
-as explained in the previous section, except that setting namespaceSelector is mandatory.
-- maxNextHops specifies the maximum number of egress gateway replicas from the selected deployment that a pod should depend on, as described in 
-[Optimize egress networking for workloads with long-lived TCP connections](egress-gateway-maintenance.mdx#reduce-the-impact-of-gateway-downtime).
-- {{prodname}} rejects an Egress Gateway Policy resource that has:
-  - no rule.
-  - no rule that specifies either gateway or destination.
-  - rule with empty `selector` or `namespaceSelector`.
-  - two or more rules with the identical destination.
-:::
 
-To configure all the pods in a namespace to use an Egress Gateway Policy, for example one named `egw-policy1`, you would annotate that namespace like this:
+
+1. If the `destination` field is not specified, it takes the default value of 0.0.0.0/0.
+
+1. If the `gateway` field is not specified, then egress traffic is routed locally, and not through an egress gateway.
+   This is helpful for reaching local endpoints that are not part of a cluster.
+
+1. Required when `gateway` field is specified.
+
+1. Required when `gateway` field is specified.
+
+1. The `maxNextHops` field specifies the maximum number of egress gateway replicas from the selected deployment that a pod depends on. For more information, see [Optimize egress networking for workloads with long-lived TCP connections](egress-gateway-maintenance.mdx#reduce-the-impact-of-gateway-downtime).
+
+
+
+{{prodname}} rejects egress gateway policies that do any of the following:
+* The policy has no rule that specifies a gateway or a destination
+* The policy has a rule with empty `selector` or `namespaceSelector` fields.
+* The policy has two or more rules with the same destination.
+
+To configure all the pods in a namespace to use an egress gateway policy named `egw-policy1`, you could annotate the namespace like this:
 
 ```bash
-kubectl annotate ns <namespace> egress.projectcalico.org/egressGatewayPolicy="egw-policy1"
+kubectl annotate ns  egress.projectcalico.org/egressGatewayPolicy="egw-policy1"
 ```
 
-To configure a specific Kubernetes Pod to use the same Egress Gateway Policy, specify the same annotations when
-creating the pod. For example:
+To configure a specific Kubernetes pod to use the same policy, specify the same annotations when
+creating the pod.
+For example:
 
 ```bash
-kubectl apply -f - <<EOF
-apiVersion: v1
-kind: Pod
-metadata:
-  annotations:
-    egress.projectcalico.org/egressGatewayPolicy: "egw-policy1"
-  name: my-client,
-  namespace: <namespace>,
+kubectl apply -f - <,
 spec:
   ...
 EOF
 ```
 
-:::note
-If a namespace or pod refer to an Egress Gateway Policy using annotations, but the actual Egress Gateway Policy is not created,
-{{prodname}} considers it as a misconfiguration, and blocks traffic from that namespace or pod. This is also the case, even
-the namespace or pod uses other egress annotations like the ones mentioned in the previous section.
+:::caution
+
+You must create the egress gateway policy before you apply it to a namespace or pod.
+If you attempt to apply an egress gateway policy that has not been created, {{prodname}} will block all traffic from the namespace or pod.
+
 :::
 
 ### (Optional) Enable ECMP load balancing
