--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -525,6 +525,7 @@ metadata:
   annotations:
     egress.projectcalico.org/selector: egress-code == 'red'
     egress.projectcalico.org/namespaceSelector: projectcalico.org/name == '<egress gateway namespace>'
+  name: my-client,
   namespace: <namespace>,
 spec:
   ...
