Update AWS doc and fix others

--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -43,6 +43,7 @@ This how-to guide uses the following features:
 
 - Egress gateway pods and their associated Kubernetes **Namespace** and **Pod** annotations:
 
+- `egress.projectcalico.org/egressGatewayPolicy`
 - `egress.projectcalico.org/namespaceSelector`
 - `egress.projectcalico.org/selector`
 
@@ -129,7 +130,7 @@ Azure Route Server deployment is per VNet, as such each VNet with egress gateway
 - [Configure route reflector](#configure-route-reflector)
 - [Enable egress gateway support](#enable-egress-gateway-support)
 - [Deploy a group of egress gateways](#deploy-a-group-of-egress-gateways)
-- [Configure namespaces or pods to use egress gateways](#configure-namespaces-or-pods-to-use-egress-gateways)
+- [Configuring namespaces or pods to use egress gateways](#configuring-namespaces-or-pods-to-use-egress-gateways)
 - [(Optional) Enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
 - [Control the use of egress gateways](#control-the-use-of-egress-gateways)
