--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -177,7 +177,7 @@ patch release.
 - [Enable egress gateway support](#enable-egress-gateway-support)
 - [Provision an egress IP pool](#provision-an-egress-ip-pool)
 - [Deploy a group of egress gateways](#deploy-a-group-of-egress-gateways)
-- [Configure namespaces or pods to use egress gateways](#configure-namespaces-or-pods-to-use-egress-gateways)
+- [Configuring namespaces or pods to use egress gateways](#configuring-namespaces-or-pods-to-use-egress-gateways)
 - [Optionally enable ECMP load balancing](#optionally-enable-ecmp-load-balancing)
 - [Verify the feature operation](#verify-the-feature-operation)
 - [Control the use of egress gateways](#control-the-use-of-egress-gateways)
