--- a/calico-enterprise/networking/egress/troubleshoot.mdx
+++ b/calico-enterprise/networking/egress/troubleshoot.mdx
@@ -39,6 +39,7 @@ For most egress gateway scenarios you should have: `natOutgoing: false` on the e
 
 Review the following annotations that are required for the client to identify its egress gateways:
 
+- egress.projectcalico.org/egressGatewayPolicy
 - egress.projectcalico.org/selector
 - egress.projectcalico.org/namespaceSelector
 
@@ -148,9 +149,21 @@ default via 11.11.11.1 dev egress.calico onlink
 
 ```
 default onlink
-
       nexthop via  11.11.11.1 dev egress.calico weight 1 onlink
       nexthop via  11.11.11.2 dev egress.calico weight 1 onlink
+```
+
+**Sample: clients using egress gateway policies with multiple rules**
+
+```
+default onlink
+      nexthop via  11.11.11.1 dev egress.calico weight 1 onlink
+      nexthop via  11.11.11.2 dev egress.calico weight 1 onlink
+throw 192.168.0.0/16
+10.10.0.0/16 onlink
+      nexthop via 11.11.12.1 dev egress.calico weight 1 onlink
+      nexthop via 11.11.12.2 dev egress.calico weight 1 onlink
+      nexthop via 11.11.12.3 dev egress.calico weight 1 onlink
 ```
 
 If you see nothing at all, or the following:
