Change absolute paths to relative paths

--- a/calico-cloud_versioned_docs/version-3.16/threat/web-application-firewall.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/threat/web-application-firewall.mdx
@@ -259,7 +259,7 @@ kubectl replace -f ../my-ruleset.yaml
 
 ### Enable WAF using CLIs
 
-1. Create or update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Enabled`.
+1. Create or update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Enabled`.
 
 ```yaml
 apiVersion: operator.tigera.io/v1
@@ -291,8 +291,7 @@ kubectl annotate svc <service-name> -n <service-namespace> projectcalico.org/l7-
 
 #### Disable WAF feature
 
-To disable WAF, update the [ApplicationLayer](https://docs.tigera.io/reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
-
+To disable WAF, update the [ApplicationLayer](../reference/installation/api#operator.tigera.io/v1.ApplicationLayer) resource to include the `webApplicationFirewall` field, and ensure it is set to `Disabled`.
 Example:
 
 ```yaml
