TSLA-4221: Removes support for RKE/RKE2 on CC

--- a/calico-cloud/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-cloud/networking/egress/egress-gateway-on-prem.mdx
@@ -1,7 +1,5 @@
 ---
 description: Configure specific application traffic to exit the cluster through an egress gateway.
-redirect_from:
-  - /compliance/egress-gateways
 ---
 
 # Configure egress gateways, on-premises
@@ -326,10 +324,6 @@ The health port `8080` is used by:
   no policy is required to allow it. {{prodname}} only sends probes to egress gateway pods that have a named
   "health" port. This ensures that during an upgrade, health probes are only sent to upgraded egress gateways.
 
-### Deploying on a RKE2 CIS Hardened Cluster
-
-If you are deploying `egress-gateway` on a RKE2 CIS-hardened cluster, its `PodSecurityPolicies` restrict the `securityContext` and `volumes` required by egress gateway. When deploying using the egress gateway custom resource, the Tigera Operator sets up `PodSecurityPolicy`, `Role`, `RoleBinding` and associated `ServiceAccount`.
-
 ### Configuring namespaces and pods to use egress gateways
 
 You can configure namespaces and pods to use an egress gateway by:
@@ -338,7 +332,7 @@ You can configure namespaces and pods to use an egress gateway by:
 
 Using an egress gateway policy is more complicated, but it allows advanced use cases.
 
-#### Configure a namepace or pod to use an egress gateway (annotation method)
+#### Configure a namespace or pod to use an egress gateway (annotation method)
 
 In a {{prodname}} deployment, the Kubernetes namespace and pod resources honor annotations that
 tell that namespace or pod to use particular egress gateways. These annotations are selectors, and
