--- a/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/release-notes/index.mdx
@@ -4,6 +4,11 @@ description: What's new, and why features provide value for upgrading.
 
 # Release notes
 
+
+## 24 April, 2023
+
+### Depreciated support for RKE, RKE2
+
 ## April 11, 2023
 
 ### Updates to Managed Clusters
