--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -338,7 +338,7 @@ You can configure namespaces and pods to use an egress gateway by:
 
 Using an egress gateway policy is more complicated, but it allows advanced use cases.
 
-#### Configure a namepace or pod to use an egress gateway (annotation method)
+#### Configure a namespace or pod to use an egress gateway (annotation method)
 
 In a {{prodname}} deployment, the Kubernetes namespace and pod resources honor annotations that
 tell that namespace or pod to use particular egress gateways. These annotations are selectors, and
