--- a/calico-enterprise/networking/egress/troubleshoot.mdx
+++ b/calico-enterprise/networking/egress/troubleshoot.mdx
@@ -153,7 +153,30 @@ default onlink
       nexthop via  11.11.11.2 dev egress.calico weight 1 onlink
 ```
 
-**Sample: clients using egress gateway policies with multiple rules**
+**Sample: clients using the following egress gateway policy**
+
+```yaml noValidation
+apiVersion: projectcalico.org/v3
+kind: EgressGatewayPolicy
+metadata:
+  name: "egw-policy1"
+spec:
+  rules:
+  - destination:
+      cidr: 192.168.0.0/16
+    description: "Local: no gateway"
+  - destination:
+      cidr: 10.10.0.0/16
+    description: "Gateway to on prem"
+    gateway:
+      namespaceSelector: ...
+      selector: ...
+  - description: "Gateway to internet"
+    gateway:
+      namespaceSelector: ...
+      selector: ...
+      maxNextHops: 2
+```
 
 ```
 default onlink
