--- a/calico/network-policy/encrypt-cluster-pod-traffic.mdx
+++ b/calico/network-policy/encrypt-cluster-pod-traffic.mdx
@@ -276,3 +276,4 @@ To disable WireGuard on all nodes modify the default Felix configuration. For ex
 
 - [Secure Calico component communications](comms/index.mdx)
 - [Configure MTU to maximize network performance](../networking/configuring/mtu.mdx)
+- [Hands-on workshop: Learn how to implement node-to-node encryption with WireGuard](https://www.tigera.io/tutorials/?_sf_s=WireGuard)
