--- a/calico/network-policy/extreme-traffic/high-connection-workloads.mdx
+++ b/calico/network-policy/extreme-traffic/high-connection-workloads.mdx
@@ -93,4 +93,5 @@ spec:
 
 ## Above and beyond
 
-[Global network policy](../../reference/resources/globalnetworkpolicy.mdx)
+- [Global network policy](../../reference/resources/globalnetworkpolicy.mdx)
+- [Hands-on workshop: Learn how to implement eBPF security policies and XDP](https://www.tigera.io/tutorials/?_sf_s=%27calico%20ebpf%20and%20xdp%27)
