Add titles to fix left nav for CC

--- a/calico-cloud/tutorials/about-calico-enterprise.mdx
+++ b/calico-cloud/tutorials/about-calico-enterprise.mdx
@@ -1,4 +1,5 @@
 ---
+title: Calico Cloud use cases
 description: Find the Calico Enterprise features that remove major blockers in your Kubernetes journey.
 ---
 
