--- a/calico-cloud/networking/configuring/workloads-outside-cluster.mdx
+++ b/calico-cloud/networking/configuring/workloads-outside-cluster.mdx
@@ -1,5 +1,5 @@
 ---
-description: Configure {{prodname}} networking to perform outbound NAT for connections from pods to outside of the cluster.
+description: Configure Calico Cloud networking to perform outbound NAT for connections from pods to outside of the cluster.
 ---
 
 # Configure outgoing NAT
