--- a/calico-cloud_versioned_docs/version-3.16/network-policy/beginners/services/services-cluster-ips.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/network-policy/beginners/services/services-cluster-ips.mdx
@@ -2,7 +2,7 @@
 description: Expose Kuberenetes service cluster IPs over BGP using Calico Cloud, and restrict who can access them using Calico Cloud network policy.
 ---
 
-# Apply {{prodname}} policy to services exposed externally as cluster IPs
+# Apply Calico Cloud policy to services exposed externally as cluster IPs
 
 ## Big picture
 
