--- a/calico-cloud_versioned_docs/version-3.16/networking/configuring/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/networking/configuring/index.mdx
@@ -3,7 +3,7 @@ description: Configure Calico networking options.
 hide_table_of_contents: true
 ---
 
-# Configure {{prodname}} networking
+# Configure Calico Cloud} networking
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
