--- a/calico-cloud_versioned_docs/version-3.16/operations/comms/manager-tls.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/operations/comms/manager-tls.mdx
@@ -2,7 +2,7 @@
 description: Add TLS certificates to secure access to Calico Cloud Manager user interface.
 ---
 
-# Provide TLS certificates for {{prodname}} Manager
+# Provide TLS certificates for Calico Cloud Manager
 
 ## Big picture
 
