--- a/calico-cloud_versioned_docs/version-3.16/tutorials/about-calico-enterprise.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/tutorials/about-calico-enterprise.mdx
@@ -3,7 +3,7 @@ title: Calico Cloud use cases
 description: Find the Calico Cloud features that remove major blockers in your Kubernetes journey.
 ---
 
-# {{prodname}} use cases
+# Calico Cloud use cases
 
 import ReactPlayer from 'react-player';
 
