--- a/calico-cloud/network-policy/beginners/index.mdx
+++ b/calico-cloud/network-policy/beginners/index.mdx
@@ -1,9 +1,8 @@
 ---
 description: Learn how to create your first Calico Cloud network policy.
-hide_table_of_contents: true
 ---
 
-# {{prodname}} network policy for beginners
+# Calico Cloud network policy for beginners
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
