--- a/calico-cloud_versioned_docs/version-3.15/network-policy/policy-firewalls/fortinet-integration/fortimgr-integration.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/network-policy/policy-firewalls/fortinet-integration/fortimgr-integration.mdx
@@ -1,5 +1,5 @@
 ---
-description: Extend FortiManager firewall policies to Kubernetes with {{prodname}}
+description: Extend FortiManager firewall policies to Kubernetes with Calico Cloud
 ---
 
 # Extend FortiManager firewall policies to Kubernetes
