--- a/calico-cloud_versioned_docs/version-3.16/operations/comms/crypto-auth.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/operations/comms/crypto-auth.mdx
@@ -2,7 +2,7 @@
 description: Enable TLS authentication and encryption for various Calico Cloud components.
 ---
 
-# Configure encryption and authentication to secure {{prodname}} components
+# Configure encryption and authentication to secure {Calico Cloud components
 
 ## Connections from {{prodname}} components to kube-apiserver (Kubernetes and OpenShift)
 
@@ -26,7 +26,7 @@ For detailed reference information on TLS configuration parameters, refer to:
 
 <!--TODO-XREFS-CC - **Typha**: [Node-Typha TLS configuration](../../reference/component-resources/typha/configuration#felix-typha-tls-configuration)-->
 
-# {{prodname}} Manager connections
+## Calico Cloud Manager connections
 
 Tigera {{prodname}} Manager's web interface, run from your browser, uses HTTPS to securely communicate
 with the {{prodname}} Manager, which in turn, communicates with the Kubernetes and {{prodname}} API
