--- a/calico-enterprise/network-policy/policy-firewalls/fortinet-integration/fortimgr-integration.mdx
+++ b/calico-enterprise/network-policy/policy-firewalls/fortinet-integration/fortimgr-integration.mdx
@@ -1,5 +1,5 @@
 ---
-description: Extend FortiManager firewall policies to Kubernetes with {{prodname}}
+description: Extend FortiManager firewall policies to Kubernetes with Calico Enterprise
 ---
 
 # Extend FortiManager firewall policies to Kubernetes
