--- a/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/requirements.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/getting-started/install-on-clusters/requirements.mdx
@@ -1,5 +1,5 @@
 ---
-description: Review requirements to install {{prodname}} networking and network policy.
+description: Review requirements to install Calico Enterprise networking and network policy.
 ---
 
 # System requirements
