--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -559,16 +559,15 @@ spec:
     // callout-for-next-line
     gateway:
       // callout-for-next-line
-      namespaceSelector: ...
+      namespaceSelector: "default"
       // callout-for-next-line
-      selector: ...
+      selector: "egress-code == 'blue'"
       // callout-for-next-line
-      maxNextHops: ...
+      maxNextHops: 2
   - description: "Gateway to internet"
     gateway:
-      namespaceSelector: ...
-      selector: ...
-      maxNextHops: ...
+      namespaceSelector: "default"
+      selector: "egress-code == 'red'"
 ```
 
 
