--- a/calico-cloud/about/about-calico-cloud.mdx
+++ b/calico-cloud/about/about-calico-cloud.mdx
@@ -6,59 +6,26 @@ description: A brief description of Calico Cloud, deployment options, and featur
 
 ## What is {{prodname}}?
 
-{{prodname}} is a networking and security solution that enables Kubernetes workloads and non-Kubernetes/legacy workloads to communicate seamlessly and securely. 
+{{prodname}} is security solution for cloud-native applications running on containers and Kubernetes. It is the SaaS/pay-as-you-go version of Calico Enterprise, which includes the core Calico Open Source networking and network policy.
 
-## Components and features
+![calico-cloud](/img/calico/calico-cloud.svg)
 
-In Kubernetes, the default for networking traffic to/from pods is default-allow. If you do not lock down network connectivity using network policy, then all pods can communicate freely with other pods. 
+Beyond the Kubernetes security features in Calico Enterprise and Calico Open Source, {{prodname}} adds these container security features:
 
-{{prodname}} consists of **networking** to secure network communication, and advanced **network policy** to secure cloud-native microservices/applications at scale.
+- **Automated image scanning and blocking**
+    Monitor and assess workloads for new and existing CVEs 24/7.
 
-| Component                                                | **Description**                                              | Main features                                                |
-| -------------------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| **{{prodname}} CNI** for networking                       | {{prodname}} CNI is a control plane that programs several dataplanes. It is an L3/L4 networking solution that secure containers, Kubernetes clusters, virtual machines, and native host-based workloads. | &bull; Built-in data encryption<br />&bull; Advanced IPAM management<br />&bull; Overlay and non-overlay networking options<br />&bull; Choice of dataplanes: iptables, eBPF, Windows HNS, or VPP |
-| **{{prodname}} network policy suite** for network policy | {{prodname}} network policy suite is an interface to the {{prodname}} CNI that contains rules for the dataplane to execute.  <br /><br />{{prodname}} network policy:<br />&bull; Is designed with a zero-trust security model (deny-all, allow only where needed) <br />&bull; Integrates with the Kubernetes API server (so you can still use Kubernetes network policy) &bull;  Supports legacy systems (bare metal, non-cluster hosts) using the same network policy model. | &bull; **Namespace** and **global** policy to allow/deny traffic within a cluster, between pods and the outside world, and for non-cluster hosts.<br /><br />&bull; **Network sets** (an arbitrary set of IP subnetworks, CIDRs, or domains) to limit IP ranges for egress and ingress traffic to workloads.<br /><br />&bull; **Application layer (L7) policy** to enforce traffic using attributes like HTTP methods, paths, and cryptographically-secure identities. |
+- **Runtime container threat defense**
+    Complete protection against known and zero-day attacks, whether they are network or container-based.
 
-## {{prodname}} deployment options
+- **Onboarding training and self-service**
+    Built-in onboarding in Manager UI, hands-on training from Customer Support during trials so you can see your use cases realized in short order, and self-service workshops and training.
 
-{{prodname}} **networking** and **network policy** are most powerful when used together, but they are both offered separately for the widest adoption across platforms. Here are common {{prodname}} deployments. 
+The sweetspot for {{prodname}} is for small teams who need to manage the full spectrum of compliance in a web-based console for novice users.
 
-| Deployment options                      | Examples                                                   |
-| --------------------------------------- | ---------------------------------------------------------- |
-| On-premises, self-managed Kubernetes    | Kubernetes/kubeadm cluster                                 |
-| Managed public cloud                    | EKS, GKE, IKS, AKS                                         |
-| Self-managed Kubernetes on public cloud | AWS, GCE, Azure, Digital Ocean                             |
-| Self-managed Kubernetes distributions   | OpenShift, AKS on Azure stack, Mirantis (MKE), RKE, VMware |
-| Integrations                            | OpenStack, Flannel                                         |
-| Bare metal, non-cluster hosts           |                                                            |
-| Windows Kubernetes clusters             |                                                            |
+## Need more info?
 
-
-For a list of platforms used by Calico community members, see [Community-tested Kubernetes versions](../getting-started/kubernetes/community-tested).
-
-
-## Feature summary
-
-The following table summarizes the main {{prodname}} features. To search for specific features, see [Product comparison](product-comparison).
-
-| Feature                      | Description                                                  |
-| ---------------------------- | ------------------------------------------------------------ |
-| Dataplanes                   | eBPF, standard Linux iptables, Windows HNS, VPP.         |
-| Networking                   | &bull; Scalable pod networking using BPG or overlay networking<br />&bull; Advanced IP address management that is customizable |
-| Security                     | &bull; Network policy enforcement for workload and host endpoints<br />&bull; Data-in-transit encryption using WireGuard |
-| Monitor {{prodname}} components | Uses Prometheus to monitor {{prodname}} component metrics.     |
-| User interfaces              | CLIs: `kubectl` and `calicoctl`                              |
-| APIs                         | &bull; Calico API for {{prodname}} resources <br /&bull; Installation API for operator installation and configuration |
-| Support and maintenance      | Community-driven. {{prodname}} powers 2M+ nodes daily across 166 countries. |
-
-## Install {{prodname}}
-
-You can install {{prodname}} using a single operator/Helm chart or manifests.
-
-To get start with {{prodname}} in 15 minutes:
-
-- [Quickstart for Calico on Kubernetes](../getting-started/kubernetes/quickstart.mdx)
-- [Quickstart for Calico on K3s](../getting-started/kubernetes/k3s/quickstart.mdx)
-- [Quickstart for Calico on minikube](../getting-started/kubernetes/minikube.mdx)
-- [Quickstart for Calico on MicroK8s](../getting-started/kubernetes/microk8s.mdx)
-- [Quickstart for Calico on Kind](../getting-started/kubernetes/kind.mdx)
+- For specific {{prodname}} features, see [Tigera product comparison]()
+- To connect your cluster to {{prodname}} in 15 minutes, [start a free trial]()
+- For {{prodname}} pricing, see [Calico Cloud pricing](https://www.tigera.io/tigera-products/calico-cloud-pricing/)
+- Not ready to start a trial, but want to know what happens when you connect a cluster, see [Connect a cluster]()
