--- a/calico-cloud/about/product-comparison.mdx
+++ b/calico-cloud/about/product-comparison.mdx
@@ -21,7 +21,9 @@ The SaaS version of {{prodname}} Enterprise. It adds Image Assurance to scan and
 
 ![calico-cloud](/img/calico/calico-cloud.svg)
 
-What is the best fit for you? It depends on your needs. The following table provides a high-level comparison. 
+## Best fit
+
+What is the best fit for you? It depends on your needs. The following table provides a high-level comparison.
 
 | Product                   | Cost and support                                             | Best fit                                                     |
 | ------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
