--- a/calico-cloud_versioned_docs/version-3.15/visibility/elastic/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/visibility/elastic/overview.mdx
@@ -1,3 +1,19 @@
+| Feature                      | Description                                                  |
+| ---------------------------- | ------------------------------------------------------------ |
+| Automated image scanning and blocking |  |
+| Integration with both Calico and Calico Enterprise networking and policy | Seamless integration so you can scale at your own pace with the same networking and policy. |
+| Onboarding and training | - Built-in onboarding in Manager UI for new users <br />- Hands-on training during trial from Customer Support to ensure you see how your use cases can be achieved. |
+|                      |  |
+| Monitor {{prodname}} components | Uses Prometheus to monitor {{prodname}} component metrics.     |
+| User interfaces              | CLIs: `kubectl` and `calicoctl`                              |
+| APIs                         | &bull; Calico API for {{prodname}} resources <br /&bull; Installation API for operator installation and configuration |
+| Support and maintenance      | Community-driven. {{prodname}} powers 2M+ nodes daily across 166 countries. |
+
+
+
+
+
+
 | Resource                                                  | URL                                                          |
 | --------------------------------------------------------- | ------------------------------------------------------------ |
 | Install {{prodname}} on a cluster in 15 minutes           | &bull; [Connect a cluster]()                                 |
